--- a/WebContent/WEB-INF/style.css
+++ b/WebContent/WEB-INF/style.css
@@ -1,6 +1,9 @@
 *{
 	box-sizing: border-box;
 }
+main{
+	margin:0 auto !important;
+}
 .enchere_container
 {
 	margin:0px;
@@ -34,3 +37,4 @@
 	max-height:300px;
 	overflow:scroll;
 }
+
